# Amethyst-Launcher-Core

./: .gitignore  Cargo.toml  README.md  README.zh.md
.VSCodeCounter/2023-04-16_14-25-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: rust.yml
mock/: assets_index_117.json  mods.toml
src/: lib.rs
src/core/: errors.rs  folder.rs  mod.rs  platform.rs  task.rs  version.rs
src/game_data/: mod.rs
src/game_data/mods/: fabric.rs  mod.rs
src/game_data/saves/: level.rs
src/install/: mod.rs
src/install/fabric/: install.rs  mod.rs  version_list.rs
src/install/forge/: install.rs  install_profile.rs  legacy_install.rs  mod.rs  new_install.rs  version_list.rs
src/install/optifine/: install.rs  mod.rs  version_list.rs
src/install/quilt/: install.rs  mod.rs  version_list.rs
src/installer/: fabric.rs  forge.rs  mod.rs  profile.rs  task.rs  vanilla.rs
src/installer/fabric/: install.rs  mod.rs  version_list.rs
src/installer/forge/: forge.rs  install.rs  legacy_install.rs  new_install.rs
src/installer/optifine/: install.rs  mod.rs
src/installer/quilt/: install.rs  mod.rs
src/launch/: argument.rs  forge.rs  launch.rs  mod.rs  options.rs
src/launcher/: default.rs
src/mod_parser/: fabric.rs  forge.rs  mod.rs  quilt.rs
src/resourcepack/: mod.rs
src/saves/: gamerule.rs  level.rs  mod.rs
src/utils/: download.rs  folder.rs  mod.rs  nbt.rs  platform.rs  sha1.rs  unzip.rs  versions.rs
src/world/: mod.rs
test-data/: mods.toml
