[package]
name = "mgl_core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Broken-Deer/magical-launcher-core"
keywords = ["minecraft", "launcher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.8.1"
reqwest = { version = "0.11", features = ["json"] }
rayon = "1.5"
once_cell = "1.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
zip = "0.6.6"
deflate = "0.8"
sha1 = "0.6"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics", ] }
num_cpus = "1.0"
anyhow = "1.0"
